<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlPersonDataMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llPersonDataMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/llNameMain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:text="@string/name"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="24sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSexMain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/sex"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/male"
        android:textSize="24sp" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:text="@string/female"
        android:textSize="24sp" />

</RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAgeMain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/age"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:scrollHorizontally="false"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>